--- a/css/style.css
+++ b/css/style.css
@@ -37,21 +37,115 @@ body {
     margin: 0 auto;
 }
 
+.main-btn {
+    border-radius: 30px;
+    min-width: 98px;
+    height: 32px;
+    background-color: #bbf330;
+    border: none;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 1.5;
+}
+
+.main-btn:hover,
+.main-btn:focus {
+    background-color: #ffe450;
+}
+
 
 /* =================== Header ================= */
 .header .container {
     display: flex;
+    align-items: center;
 }
 
 .logo {
+    margin-right: auto;
 }
 .nav {
 }
 .nav-list {
     display: flex;
+    gap: 28px;
 }
 .nav-list-item {
 }
 .nav-link {
+    display: block;
+    padding-top: 28px;
+    padding-bottom: 28px;
+    margin-right: 30px;
 }
 /* =================== /Header ================= */
+
+
+/* =================== Hero ================= */
+
+.page-hero {
+    padding-top: 14px;
+    padding-bottom: 69px;
+}
+.hero-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.page-hero-left-side {
+    max-width: 511px;
+}
+.main-title {
+    font-size: 48px;
+    line-height: 1.2;  
+    margin-bottom: 28px;
+}
+.page-hero-text {
+    line-height: 1.5;   
+    margin-bottom: 40px;
+}
+.main-btn {
+}
+
+.page-hero-img-div {
+    border-radius: 291px;
+    width: 580px;
+    height: 580px;
+    border: 24px solid #ffe550;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.page-hero-img {
+
+}
+/* =================== /Hero ================= */
+
+
+/* =================== Offering ================= */
+
+
+.offering-container {
+}
+.page-offering-img-div {
+}
+.page-offering-div-text {
+}
+.page-offering-title {
+}
+
+.page-offering-menu {
+
+}
+.page-offering-text {
+}
+.page-offering-subtitle {
+}
+.page-offering-subtext {
+}
+
+.offering-btn {
+}
+
+.page-offering-menu-item {}
+/* =================== /Offering ================= */
