--- a/css/style.css
+++ b/css/style.css
@@ -109,8 +109,8 @@ body {
     line-height: 1.5;   
     margin-bottom: 40px;
 }
-.main-btn {
-}
+/* .main-btn {
+} */
 
 .page-hero-img-div {
     border-radius: 291px;
@@ -122,9 +122,9 @@ body {
     align-items: center;
 }
 
-.page-hero-img {
+/* .page-hero-img {
 
-}
+} */
 /* =================== /Hero ================= */
 
 
@@ -173,7 +173,7 @@ body {
     margin-bottom: 27px;
 }
 
-.page-offering-menu-item {}
+/* .page-offering-menu-item {} */
 
 .page-offering-subtitle {
     font-size: 18px;
@@ -237,8 +237,8 @@ body {
     padding-bottom: 126px;
     background-color: #ffe550;
 }
-.reviews-container {
-}
+/* .reviews-container {
+} */
 .page-reviews-title {
     font-size: 42px;
     margin-bottom: 20px;
@@ -309,8 +309,8 @@ body {
     line-height: 1.5;
     margin-bottom: 24px;
 }
-.page-subscribe-form {
-}
+/* .page-subscribe-form {
+} */
 .page-subscribe-form-input {
     border: 0.85px solid #ffe550;
     border-radius: 30px;
@@ -319,8 +319,8 @@ body {
     height: 42px;   
     margin-right: 32px;
 }
-.main-btn {
-}
+/* .main-btn {
+} */
 /* =================== /Subscribe ================= */
 
 
@@ -355,10 +355,10 @@ body {
     display: flex;
     gap: 28px; 
 }
-.page-footer-nav-menu-item {
+/* .page-footer-nav-menu-item {
 }
 .page-footer-nav-link {
-}
+} */
 .page-footer-subscribe {
     display: flex;
     flex-direction: column;
@@ -368,9 +368,9 @@ body {
     line-height: 1.5;
     margin-bottom: 12px;
 }
-.page-footer-subscribe-form {
+/* .page-footer-subscribe-form {
     
-}
+} */
 .page-footer-subscribe-input {  
     border: 0.85px solid #ffe550;
     border-radius: 30px;
@@ -400,8 +400,8 @@ body {
     gap: 20px;
     margin-right: auto;
 }
-.page-footer-links-menu-item {
-}
+/* .page-footer-links-menu-item {
+} */
 .page-footer-links-link {
     font-weight: 400;
     font-size: 12px;
@@ -415,3 +415,68 @@ body {
 }
 
 /* =================== /Footer ================= */
+
+/* =================== Backdrop ================= */
+
+
+.backdrop {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(94, 99, 99, 0.7);
+
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+
+/* =================== /Backdrop ================= */
+
+/* =================== Modal ================= */
+.modal {
+    border-radius: 30px;
+    width: 458px;
+    height: 449px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.06);
+    background-color: #ffe550;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+.modal-close-btn {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    border-radius: 100%;
+    background-color: #ffffff;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.06);
+    cursor: pointer;
+    border: none;
+    width: 32px;
+    height: 32px;
+    padding: 0;
+    line-height: 0;
+    transition: background-color 250ms linear;
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus  {
+    background-color: #7eb101;
+    /* fill: #ffffff; */
+}
+
+.modal-close-btn:hover > .modal-close-icon,
+.modal-close-btn:focus > .modal-close-icon {
+    fill: #ffffff;
+}
+/* =================== /Modal ================= */
